added animations (AOS)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular-custom-modal": "^1.2.0",
+    "aos": "^2.3.4",
     "baguettebox.js": "^1.10.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
