--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,15 @@
             "styles": [
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/baguettebox.js/dist/baguetteBox.min.css"
+              "./node_modules/baguettebox.js/dist/baguetteBox.min.css",
+              "./node_modules/aos/dist/aos.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/baguettebox.js/dist/baguetteBox.min.js"
+              "./node_modules/baguettebox.js/dist/baguetteBox.min.js",
+              "./node_modules/aos/dist/aos.js"
             ]
           },
           "configurations": {
