created JSON file for distributors

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-bootstrap-example": {
+    "eggersmann": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-bootstrap-example",
+            "outputPath": "dist/eggersmann",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-bootstrap-example:build"
+            "browserTarget": "eggersmann:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-bootstrap-example:build:production"
+              "browserTarget": "eggersmann:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-bootstrap-example:build"
+            "browserTarget": "eggersmann:build"
           }
         },
         "test": {
@@ -104,7 +104,7 @@
         }
       }
     },
-    "angular-bootstrap-example-e2e": {
+    "eggersmann-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -112,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-bootstrap-example:serve"
+            "devServerTarget": "eggersmann:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-bootstrap-example:serve:production"
+              "devServerTarget": "eggersmann:serve:production"
             }
           }
         },
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "angular-bootstrap-example"
+  "defaultProject": "eggersmann"
 }
